--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+$border-radius: 10px;
+
+
+
 .App {
   text-align: center;
   #quote-box {
@@ -5,15 +9,47 @@
     background-color: white;
     border-radius: 10px;
     color: black;
+
+    #text{
+      margin-bottom: 0px;
+      #quote-icon{
+        margin-right: 10px;
+      }
+    }
     #author {
       text-align: end;
+      margin-top: 0;
     }
-    #tweet-quote {
-      float: left;
-      padding-left: 5%;
+    .buttons{ 
+      border-radius: 5px;
+      display: flex;
+      justify-content: space-between;
+      min-height: 50px;       
+      #tweet-quote {
+        display: flex;
+        padding: 10px;
+        color: white;
+        text-decoration: none;
+        border-radius: $border-radius;
+        max-width: 50px;
+        height: 
+        100%;
+        align-self: center;
+        justify-content: center;
+      }
+      #new-quote {
+      display: inline-block;
+      color: white;
+      border-radius: 10px;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      font-size: 15px;
+      }
     }
   }
-.App-header {
+ .App-header {
+  padding: 10%;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
