--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,13 @@
 $border-radius: 10px;
 
-
+@media only screen and (max-width: 600px) {
+  .buttons {
+    flex-direction: column-reverse;
+  }
+  #new-quote {
+    margin-bottom: 10px;
+  }
+}
 
 .App {
   text-align: center;
@@ -21,7 +28,7 @@ $border-radius: 10px;
       margin-top: 0;
     }
     .buttons{ 
-      border-radius: 5px;
+     
       display: flex;
       justify-content: space-between;
       min-height: 50px;       
@@ -32,8 +39,8 @@ $border-radius: 10px;
         text-decoration: none;
         border-radius: $border-radius;
         max-width: 50px;
-        height: 
-        100%;
+        height: 100%;
+        
         align-self: center;
         justify-content: center;
       }
